[DOC] introduce tabularx; style;

--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -226,6 +226,7 @@
 \definecolor{lightgray}{RGB}{190,190,190}
 \sethlcolor{lightgray}
 
+\usepackage{tabularx}
 \begin{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
