--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -204,6 +204,7 @@
 
 \newcommand{\KNIMENODE}[1]{\texttt{#1}}
 \newcommand{\OPENMSTOOL}[1]{\texttt{#1}}
+\newcommand{\IPRGFOLDER}{iPRG2015}
 
 \usepackage{etoolbox} % simplified if / else checks in latex
 
